--- a/index.html
+++ b/index.html
@@ -7,9 +7,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/normalize.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    Сайт про бурнеры
+    <header class="header">
+        <div class="container">
+            <div class="header-wrapper">
+                <div class="logo"></div>
+                <nav class="nav">
+                    <a href="#" class="nav-link">Главная</a>
+                    <a href="#" class="nav-link">Меню</a>
+                    <a href="#" class="nav-link">О нас</a>
+                    <a href="#" class="nav-link">Контакты</a>
+                </nav>
+                <a href="#" class="card">
+                    $125 
+                    <span class="card-count">5</span></a>
+            </div>    
+        </div>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs-item"><a class="breadcrumbs-link" href="#">Главная</a>
+                <li class="breadcrumbs-item">Меню</li>
+                </li>
+            </ul>
+            <h1 class="hero-title">Наше меню</h1>
+            <p class="hero-description">Выбирай из предложенного ассортимента и мы доставим блюдо в&nbsp;течении часа</p>
+        </div>
+    </section>
+    <section class="banner">
+        <div class="container">
+            <div class="banner-wrapper">
+                <h2 class="banner-title"><samp>Скидка</samp>-30%%</h2>
+                <p class="banner-description">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не&nbsp;суммируются.</p>
+                <button class="banner-btn">Купить сейчас</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
