--- a/index.html
+++ b/index.html
@@ -41,11 +41,81 @@
     <section class="banner">
         <div class="container">
             <div class="banner-wrapper">
-                <h2 class="banner-title"><samp>Скидка</samp>-30%%</h2>
-                <p class="banner-description">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не&nbsp;суммируются.</p>
-                <button class="banner-btn">Купить сейчас</button>
+                <h2 class="banner-title">
+                    <span>Скидка</span>
+                    -30%
+                </h2>
+                <p class="banner-description">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
+                <button type="buttom" class="banner-btn">КУПИТЬ СЕЙЧАС</button>
             </div>
         </div>
     </section>
+    <main>
+        <section>
+            <div class="container">
+                <div class="menu">
+                    <div class="menu-header">
+                        <h2 class="menu-title">БУРГЕРЫ</h2>
+                        <select name="" id="">
+                            <option value="Сортировать" disabled selected>Сортировать</option>
+                            <option value="По возростанию цены">По возростанию цены</option>
+                            <option value="По убыванию цены">По убыванию цены</option>
+                            <option value="Лучшая цена">Лучшая цена</option>                            
+                        </select>
+                    </div>
+                    <div class="menu-box">
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Острый бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Острый бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Острый бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Острый бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Острый бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Острый бургер</h3>
+                            <p class="menu-price">$26</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
