--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="menu">
                     <div class="menu-header">
                         <h2 class="menu-title">БУРГЕРЫ</h2>
-                        <select name="" id="">
+                        <select class="menu-select">
                             <option value="Сортировать" disabled selected>Сортировать</option>
                             <option value="По возростанию цены">По возростанию цены</option>
                             <option value="По убыванию цены">По убыванию цены</option>
@@ -74,42 +74,83 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                                <img src="images/menu/02.png" alt="Острый бургер">
                             </div>
-                            <h3 class="menu-name">Острый бургер</h3>
-                            <p class="menu-price">$26</p>
+                            <h3 class="menu-name">Гриль Бургер</h3>
+                            <p class="menu-price">$16</p>
                             <button type="button" class="menu-btn">Купить</button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                                <img src="images/menu/03.png" alt="Острый бургер">
                             </div>
-                            <h3 class="menu-name">Острый бургер</h3>
-                            <p class="menu-price">$26</p>
+                            <h3 class="menu-name">Бурег Гигант</h3>
+                            <p class="menu-price">$37</p>
                             <button type="button" class="menu-btn">Купить</button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                                <img src="images/menu/04.png" alt="Острый бургер">
                             </div>
-                            <h3 class="menu-name">Острый бургер</h3>
-                            <p class="menu-price">$26</p>
+                            <h3 class="menu-name">Бургер с курицей</h3>
+                            <p class="menu-price">$18</p>
                             <button type="button" class="menu-btn">Купить</button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                                <img src="images/menu/05.png" alt="Острый бургер">
                             </div>
-                            <h3 class="menu-name">Острый бургер</h3>
-                            <p class="menu-price">$26</p>
+                            <h3 class="menu-name">Бургер с курицей</h3>
+                            <p class="menu-price">$9</p>
                             <button type="button" class="menu-btn">Купить</button>
                         </div>
                         <div class="menu-item">
                             <div class="menu-thumb">
-                                <img src="images/menu/01.jpg" alt="Острый бургер">
+                                <img src="images/menu/06.png" alt="Острый бургер">
                             </div>
-                            <h3 class="menu-name">Острый бургер</h3>
-                            <p class="menu-price">$26</p>
+                            <h3 class="menu-name">Тройной бургер</h3>
+                            <p class="menu-price">$7</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="menu">
+                    <div class="menu-header">
+                        <h2 class="menu-title">Дополнительно</h2>
+                        <select class="menu-select">
+                            <option value="Сортировать" disabled selected>Сортировать</option>
+                            <option value="По возростанию цены">По возростанию цены</option>
+                            <option value="По убыванию цены">По убыванию цены</option>
+                            <option value="Лучшая цена">Лучшая цена</option>                            
+                        </select>
+                    </div>
+                    <div class="menu-box">
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/07.png" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Сэндвич</h3>
+                            <p class="menu-price">$3</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/08.png" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Картошка Фри</h3>
+                            <p class="menu-price">$5</p>
+                            <button type="button" class="menu-btn">Купить</button>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-thumb">
+                                <img src="images/menu/09.png" alt="Острый бургер">
+                            </div>
+                            <h3 class="menu-name">Хот-Дог</h3>
+                            <p class="menu-price">$7</p>
                             <button type="button" class="menu-btn">Купить</button>
                         </div>
                     </div>
@@ -117,5 +158,38 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <a href="#" class="footer-logo"></a>
+            <div class="footer-item">
+                <h3 class="footer-title">Основные ссылки</h3>
+                <nav class="footer-nav">
+                    <a href="#" class="footer-link">Меню</a>
+                    <a href="#" class="footer-link">Заказ и Доставка</a>
+                    <a href="#" class="footer-link">Методы оплаты</a>
+                    <a href="#" class="footer-link">Контакты</a>
+                </nav>
+            </div>
+            <div class="footer-item">
+                <h3 class="footer-title">Основная информация</h3>
+               <ul class="footer-list">
+                <li class="footer-list-item">
+                    <span>Время</span>
+                    ПН - ВС <br>
+                    11:00 - 22:00 без перерывов
+                </li>
+                <li class="footer-list-item">
+                    <span>Адрес</span>
+                    Москва, ул. Тверская, 5
+                </li>
+               </ul>
+            </div>
+            <div class="footer-item">
+                <a class="footer-tel" href="tel:+79007871313">+ 7 900 787 13-13</a>
+                <a class="footer-tel" href="tel:+79007871414">+ 7 900 787 14-14</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
